--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 # Database connection settings
-spring.datasource.url=jdbc:mysql://localhost:3306/techjobs_auth
-spring.datasource.username=techjobs_auth
+spring.datasource.url=jdbc:mysql://localhost:3306/tech-jobs_auth
+spring.datasource.username=tech-jobs_auth
 spring.datasource.password=auth
 
 # Specify the DBMS
